--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
     "orientation": "portrait-primary",
     "icons": [
     {
-      "src": "/FrontendDevIntApp/src/assets/icon.png",
+      "src": "/FrontendDevIntApp/icon.png",
       "type": "image/png", "sizes": "200x200"
     }
   ]
