--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Milk Kitchen",
-    "short_name": "Milk Kitchen",
+    "name": "Milk Kitchen Updates",
+    "short_name": "Milk Kitchen Updates",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#fdfdfd",
