--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Milk Kitchen Updates",
-    "short_name": "Milk Kitchen Updates",
+    "name": "Milk Kitchen Last Version",
+    "short_name": "Milk Kitchen Last Version",
     "start_url": "/FrontendDevIntApp",
     "display": "standalone",
     "background_color": "#fdfdfd",
