--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,14 @@
 {
     "name": "Milk Kitchen Last Version",
     "short_name": "Milk Kitchen Last Version",
-    "start_url": "/FrontendDevIntApp",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#fdfdfd",
     "theme_color": "#db4938",
     "orientation": "portrait-primary",
     "icons": [
     {
-      "src": "/FrontendDevIntApp/icon.png",
+      "src": "/icon.png",
       "type": "image/png", "sizes": "200x200"
     }
   ]
